update logo sources

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,4 @@
+// logo sources: https://en.wikipedia.org/
 :root{
     --primary-1:hsl(246, 96%, 39%);
     --primary-2:hsl(240, 69%, 48%);
@@ -93,14 +94,6 @@
       border-right: darkblue solid 0.4rem;
       border-bottom: none; 
 
-  }
-
-  .technology{
-      flex-direction: column;
-  }
-
-  .technology img{
-      margin: 1rem 1rem 1rem 1rem;
   }
 
 }
