--- a/sass/main.scss
+++ b/sass/main.scss
@@ -69,14 +69,12 @@
   border:var(--primary-1) solid 0.05rem;
   border-radius: 30px;
   display: flex;
-  flex-direction: row;
+  // flex-direction: row;
 }
 
 .technology img{
   margin: 1rem 1rem 1rem 1rem;
-  transform: scale(1.0);
-  transition: transform 1.0s ease;
-  max-width: 300px;
+  max-width: 200px;
 }
 
 @media (max-width: 550px) {
