--- a/sass/main.scss
+++ b/sass/main.scss
@@ -30,10 +30,10 @@
     background-size: 100%;
     background-repeat: no-repeat;
     img{
-      width: 25%;
+      width: 20%;
       height: auto;
       min-width: 100px;
-      max-width: 300px;
+      max-width: 200px;
     }
   }
   
@@ -77,21 +77,21 @@
   max-width: 200px;
 }
 
-@media (max-width: 550px) {
-  header h1 {
-      line-height: 4rem;
-      padding: 2rem 1rem;
-  }
+// @media (max-width: 550px) {
+//   header h1 {
+//       line-height: 4rem;
+//       padding: 2rem 1rem;
+//   }
 
-  nav{
-      flex-direction: column;
-  }
+//   nav{
+//       flex-direction: column;
+//   }
 
-  nav a{
-      margin: 0.5rem 1.0rem; 
-      border-right: darkblue solid 0.4rem;
-      border-bottom: none; 
+//   nav a{
+//       margin: 0.5rem 1.0rem; 
+//       border-right: darkblue solid 0.4rem;
+//       border-bottom: none; 
 
-  }
+//   }
 
-}
+// }
