--- a/css/main.css
+++ b/css/main.css
@@ -66,11 +66,20 @@ nav a {
   border: var(--primary-1) solid 0.05rem;
   border-radius: 30px;
   display: flex;
+  min-width: 400px;
 }
 
 .technology img {
   margin: 1rem 1rem 1rem 1rem;
-  max-width: 200px;
+  max-width: 300px;
+  max-height: 300px;
+}
+
+@media (max-width: 600px) {
+  .technology {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
