--- a/sass/main.scss
+++ b/sass/main.scss
@@ -69,29 +69,16 @@
   border:var(--primary-1) solid 0.05rem;
   border-radius: 30px;
   display: flex;
-  // flex-direction: row;
+  min-width: 400px;
+  // flex-direction: column;
 }
 
 .technology img{
   margin: 1rem 1rem 1rem 1rem;
-  max-width: 200px;
+  max-width: 300px;
+  max-height: 300px;
 }
 
-// @media (max-width: 550px) {
-//   header h1 {
-//       line-height: 4rem;
-//       padding: 2rem 1rem;
-//   }
-
-//   nav{
-//       flex-direction: column;
-//   }
-
-//   nav a{
-//       margin: 0.5rem 1.0rem; 
-//       border-right: darkblue solid 0.4rem;
-//       border-bottom: none; 
-
-//   }
-
-// }
+@media (max-width: 600px) {
+.technology {flex-direction: column; align-items:center;} 
+}
