--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,13 +1,10 @@
 // logo sources: https://en.wikipedia.org/
+// logo sources: https://getbootstrap.com/
 :root{
     --primary-1:hsl(246, 96%, 39%);
     --primary-2:hsl(240, 69%, 48%);
-    --primary-3:hsl(246, 49%, 42%);
     --secondary-1:hsl(60deg, 50%, 30%);
     --secondary-2:hsl(219, 79%, 66%);
-    --secondary-3:hsl(204, 54%, 77%);
-    --grey-1:hsl(184, 75%, 85%);
-    --grey-2:hsl(54, 67%, 94%);
   }
 
   html {
@@ -21,10 +18,7 @@
     margin: 0rem ;
     
   }
-.card{
-  width: 18rem; 
-  height:25rem;
-}
+
   .jumbotron{
     background-image:url('../imgs/backgound.jpg') ;
     background-size: 100%;
@@ -34,12 +28,10 @@
       height: auto;
       min-width: 100px;
       max-width: 200px;
+      border-radius: 50%;
     }
   }
   
-  .cards{
-    padding-left: 1.5em;
-  }
   nav {
     width: 100%;
     // display: inline;
@@ -80,5 +72,5 @@
 }
 
 @media (max-width: 600px) {
-.technology {flex-direction: column; align-items:center;} 
+.technology {flex-direction: column; } 
 }
