dele navbar brand

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -56,6 +56,9 @@
     color:var(--primary-2);
 }
 
+.container{
+  // display: flex;
+}
 .technology{
   margin: 2rem;
   border:var(--primary-1) solid 0.05rem;
@@ -74,3 +77,7 @@
 @media (max-width: 600px) {
 .technology {flex-direction: column; } 
 }
+
+// @media (min-width: 1200px) {
+//   .technology {flex-direction: column; } 
+//   }
